# base-django

./: pyproject.toml
src/config/: settings.py
