[project]
name = "base-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
]

[tool.ruff]
line-length = 100
exclude = [".venv", "migrations", "manage.py"]

[tool.ruff.format]
quote-style = "single"  # Cadenas con comillas simples simples

[tool.ruff.lint]
extend-select = ["F", "I", "N", "A"] # Conjunto de reglas: N (nombres) R (refactorizaciones) I (importaciones) A (builtins) F (varios)
ignore = ["F401"] # F401 importaciones no usadas